<?xml version="1.0"?>
<package format="3">
  <name>pytorch_planner_pkg</name>
  <version>0.0.0</version>
  <description>Local planner using a PyTorch model.</description>
  <maintainer email="example@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>global_to_polar_cpp</depend>
  <depend>f1tenth_planning_custom_msgs</depend>
  <exec_depend>torch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
