<?xml version="1.0"?>
<package format="3">
  <name>local_learning</name>
  <version>0.0.0</version>
  <description>Local planner using a LibTorch model.</description>
  <maintainer email="example@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>message_filters</depend>
    <depend>global_to_polar_cpp</depend>
    <depend>f1tenth_planning_custom_msgs</depend>
    <depend>ament_index_cpp</depend>
    <build_depend>python3</build_depend>
    <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
